--- a/x-pack/plugin/src/yamlRestTest/resources/rest-api-spec/test/ml/text_expansion_search.yml
+++ b/x-pack/plugin/src/yamlRestTest/resources/rest-api-spec/test/ml/text_expansion_search.yml
@@ -15,7 +15,7 @@ setup:
             properties:
               source_text:
                 type: keyword
-              tokens:
+              ml.tokens:
                 type: rank_features
 
   - do:
@@ -78,17 +78,17 @@ setup:
         refresh: true
         body: |
           {"index": {}}
-          {"source_text": "my words comforter", "tokens":[{"my":1.0},{"words":1.0},{"comforter":1.0}]}
+          {"source_text": "my words comforter", "ml.tokens":{"my":1.0, "words":1.0,"comforter":1.0}}
           {"index": {}}
-          {"source_text": "the machine is leaking", "tokens":[{"the":1.0},{"machine":1.0},{"is":1.0},{"leaking":1.0}]}
+          {"source_text": "the machine is leaking", "ml.tokens":{"the":1.0,"machine":1.0,"is":1.0,"leaking":1.0}}
           {"index": {}}
-          {"source_text": "these are my words", "tokens":[{"these":1.0},{"are":1.0},{"my":1.0},{"words":1.0}]}
+          {"source_text": "these are my words", "ml.tokens":{"these":1.0,"are":1.0,"my":1.0,"words":1.0}}
           {"index": {}}
-          {"source_text": "the octopus comforter smells", "tokens":[{"the":1.0},{"octopus":1.0},{"comforter":1.0},{"smells":1.0}]}
+          {"source_text": "the octopus comforter smells", "ml.tokens":{"the":1.0,"octopus":1.0,"comforter":1.0,"smells":1.0}}
           {"index": {}}
-          {"source_text": "the octopus comforter is leaking", "tokens":[{"the":1.0},{"octopus":1.0},{"comforter":1.0},{"is":1.0},{"leaking":1.0}]}
+          {"source_text": "the octopus comforter is leaking", "ml.tokens":{"the":1.0,"octopus":1.0,"comforter":1.0,"is":1.0,"leaking":1.0}}
           {"index": {}}
-          {"source_text": "washing machine smells", "tokens":[{"washing":1.0},{"machine":1.0},{"smells":1.0}]}
+          {"source_text": "washing machine smells", "ml.tokens":{"washing":1.0,"machine":1.0,"smells":1.0}}
 
   - do:
       headers:
@@ -106,7 +106,7 @@ setup:
         body:
           query:
             text_expansion:
-              tokens:
+              ml.tokens:
                 model_id: text_expansion_model
                 model_text: "octopus comforter smells"
   - match: { hits.total.value: 4 }
